# mcp_doc_summarize_edit

./: .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  mcp_server.py  pyproject.toml  requirements.txt
core/: chat.py  cli_chat.py  openai.py  tools.py
src/mcp_document_summary/: config.py  logger.py  main.py
src/mcp_document_summary/client/: mcp_client.py
src/mcp_document_summary/core/: chat.py  cli_chat.py  openai.py  tools.py
src/mcp_document_summary/server/: server.py
tests/: test_config.py  test_server.py
